Fix z-index of navigation bar broken by the z-index bugfix for the cards.

--- a/styles/default_style.less
+++ b/styles/default_style.less
@@ -23,7 +23,7 @@ body {
     #navbar {
         white-space: nowrap;
         overflow: hidden;
-        z-index: 15;
+        z-index: 10001; // I know, I know... A z-index of more than 10 is a code smell, but it was really necessary here, trust me
         background-color: @colorDarkBackground;
 
         .navbarIcon {
